--- a/Ejemplo2.html
+++ b/Ejemplo2.html
@@ -29,6 +29,12 @@
     <p>hola<sub>subindice</sub></p>
     <p>hola<sup>superindice</sup></p>
     <p>muchos &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; espacios</p>
+    <p><font color="red">hola</font></p>
+    <p><font color="#00FFF0">hola</font></p>    <!--color en rgb-->
+    <!--align-->
+    <p align="left">izquierda</p>
+    <p align="center">centro</p>
+    <p align="right">derecha</p>
 </body>
 
 </html>
